# nooterra-protocol

./: .gitignore  .railwayignore  DEPLOY_CHECKLIST.md  Dockerfile  LICENSE  Procfile  README.md  demo-logistics.sh  deploy-standard.sh  package-lock.json  package.json  railway.toml
cli/nooterra-agent/: package.json  tsconfig.json
cli/nooterra-workflow/: package.json  tsconfig.json
coordinator/: .env.example  .railwayignore  Dockerfile  Dockerfile.build  Procfile  README-deploy.md  README.md  package-lock.json  package.json  tsconfig.json
coordinator/src/: db.ts  list-workflows.ts  platform.ts  server.ts  types.d.ts  validation.ts
docs/: acard.md  agent-health.md  agent-integration.md  agent-quickstart.md  demo-assets-checklist.md  flash-team-demo.md  investor-deck-outline.md  sdk-api.md  sdk-errors.md  workflow-engine.md  workflow-retries.md
docs/internal/: positioning.md
examples/: README.md  langchain-agent.ts  package-lock.json  package.json  tsconfig.json
examples/agent-echo/: Dockerfile  README.md  package-lock.json  package.json  server.mjs
examples/agent-github/: README.md  agent.config.mjs  package.json  (+1 more)
scripts/: README.md  e2e-live.mjs  e2e-live.ts  import-huggingface-models.js  logistics-hermes-tts-workflow.mjs  package-lock.json  package.json  register-free-agents.js  test-slack-workflow.mjs  test-slack-workflow.ts
sdk-python/: README.md  pyproject.toml
sdk-python/nooterra/: __init__.py
spec/: agent-input-schema.ts  agent-runtime.md  federation.md  protocol-messages.md
specs/: agent-card.md  coordination.md  discovery.md  settlement.md
(+85 files in other folders)
